# pletor-canvas

./: .gitignore  README.md  docker-compose.yml
Pletor-canvas/backend/: .env.example  Dockerfile  package-lock.json  package.json  pyproject.toml
Pletor-canvas/backend/alembic/: env.py
Pletor-canvas/backend/alembic/versions/: 7d4de70eeeee_add_tree_node_table.py
Pletor-canvas/backend/app/: main.py
Pletor-canvas/backend/app/agent/: agent_context_builder.py  agent_controller.py  agent_execution_service.py  agent_model.py  test_agent.py
Pletor-canvas/backend/app/canvas/: canvas_controller.py  canvas_model.py  canvas_repository.py  canvas_service.py
Pletor-canvas/backend/app/config/: settings.py
Pletor-canvas/backend/app/controllers/: canvas_controller.py  test_canvas_controller.py  test_tree_controller.py  test_workflowy_controller.py  tree_controller.py
Pletor-canvas/backend/app/middlewares/: error_handler.py
Pletor-canvas/backend/app/models/: agent.py  canvas.py  tree_node.py
Pletor-canvas/backend/app/repositories/: canvas_repository.py  tree_node_repository.py
Pletor-canvas/backend/app/schemas/: canvas.py  tree_node.py
Pletor-canvas/backend/app/services/: agent_execution_service.py  tree_node_service.py  workflowy_parser_service.py  workflowy_sync_service.py
Pletor-canvas/backend/app/tree/: test_tree.py  tree_controller.py  tree_model.py  tree_repository.py  (+2 more)
Pletor-canvas/backend/prisma/: schema.prisma
Pletor-canvas/backend/src/: server.ts
Pletor-canvas/backend/tests/: test_agent_api.py  test_workflowy_api.py  test_workflowy_parser.py
(+244 files in other folders)
